<resources>
    <string name="app_name">TTAudit Bayer Transferencista</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="descr_image">Image</string>
    <string-array name="nav_drawer_items">
        <item>Rutas</item>
        <item>Backup de fotos</item>
        <item>Fotos truncadas</item>
        <item>Registro de fotos</item>
        <item>Sincronizar Tiendas</item>
        <item>Reinicializar Campaña</item>
        <item>Buscar Pedidos</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="menu_text_about">Acerca de</string>
    <string name="menu_text_exit">Salir</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">INICIAR SESIÓN</string>
    <string name="save">Guardar</string>
    <string name="saveInformation">Está seguro que desea Guardar</string>
    <string name="saveError">No se pudo guardar la información inténtelo nuevamente</string>
    <string name="gpsMessage">Gps deshabilitado, por favor habilitar el gps para la geolocalización</string>
    <string name="saveSuccess">Se guardo correctamente los datos</string>
    <string name="storeAuditFinish">Terminó el registro de la tienda</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="sw_si">SI</string>
    <string name="sw_no">NO</string>
    <string name="dialog_message_permission">Para poder iniciar la aplicación necesita establecer los permisos</string>
    <string name="permission_access">Se ha otorgado el permiso</string>
    <string name="ok">OK</string>
    <string name="version">Versión</string>
    <string name="log">Log</string>
    <string name="developer">Developed by:</string>
    <string name="mesaage_on_back">No se puede volver atras, los datos ya fueron guardado, para modificar póngase en contácto con el administrador</string>
    <string name="text_loading">Cargando...</string>
    <string name="message_no_save_data">No se pudo guardar la información intentelo nuevamente</string>
    <string name="message_save">Guardar</string>
    <string name="message_delete">Eliminar</string>
    <string name="message_save_information">Está seguro de guardar </string>
    <string name="message_delete_information_product">Está seguro de eliminar el producto </string>
    <string name="message_login_error">No se pudo iniciar sessión</string>
    <string name="message_login_success">Inicio de sesión correctamente</string>
    <string name="message_select_options">Seleccione una opción</string>
    <string name="text_requiere_commet">Ingresar el giro</string>
    <string name="text_requiere_fullname">Ingresar Nombre o Razón Social</string>
    <string name="text_requiere_address">Ingresar Dirección</string>
    <string name="title_activity_cliente_perfecto">ClientePerfectoActivity</string>
    <string name="message_create_store_finish">Termino el registro de la tienda</string>
    <string name="message_gps_title">GPS configuración</string>
    <string name="message_gps_information">El GPS no está habilitado. Ingrese a la configuración para habilitarlo</string>
    <string name="message_gps_enabled_information">Habilite su GPS para continuar</string>
    <string name="message_requiere_user">Ingrese un  nombre de usuario</string>
    <string name="message_requiere_password">Ingrese el password</string>
    <string name="title_activity_panel_admin">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_total_stores">Tiendas: </string>
    <string name="text_audits">Auditados: </string>
    <string name="text_id_route">ID Ruta: </string>
    <string name="message_no_found">No se encontraron registros</string>
    <string name="action_location">Ver mapa de rutas</string>
    <string name="action_location_all">Ver mapa de toda las rutas</string>
    <string name="title_activity_maps_route">Map</string>
    <string name="message_app_no_initialize">No se puede inicializar la aplicación no se puede obtener datos</string>
    <string name="title_activity_Stores">Tiendas</string>
    <string name="text_save_password">Guardar contraseña</string>
    <string name="text_close_application">Cerrar aplicación</string>
    <string name="text_title_close_sesion">Cerrar sesión</string>
    <string name="message_close_sesion">Desea cerrar sesión ?</string>
    <string name="text_title_close_app">Cerrar aplicación</string>
    <string name="message_close_app">Está seguro que desea cerrar la aplicación</string>
    <string name="text_load_compnies">Cargando campaña</string>
    <string name="girl_ipsum">Morbi posuere lorem nec elit dapibus, vitae accumsan mauris pellentesque.         Vestibulum a lobortis mi. Vestibulum lacinia molestie semper. Pellentesque         ultrices arcu lacus, interdum mollis nibh convallis ut. Aliquam sagittis         sem a lacus gravida, eu accumsan purus volutpat. Donec tempus, est id         tristique consectetur, lacus ligula dignissim turpis, cursus commodo turpis         libero in purus. Phasellus tempus gravida tempor.</string>
    <string name="title_activity_Stores_Audit">Auditar Tienda</string>
    <string name="text_id_store">ID Tienda:</string>
    <string name="text_address">Direccion:</string>
    <string name="text_reference">Referencia:</string>
    <string name="text_district">Distrito:</string>
    <string name="text_load_route">Cargando rutas de auditor</string>
    <string name="text_load_stores">Cargando tiendas</string>
    <string name="text_download_init">Inicio de descarga</string>
    <string name="text_download_routes">Descargando rutas</string>
    <string name="text_download_store">Descargando tiendas</string>
    <string name="text_download_companies">Descargando campaña</string>
    <string name="text_download_audits">Descargando auditoría</string>
    <string name="message_no_get_company">No se puedo obtener campaña</string>
    <string name="message_no_get_audit">No se pudo obtener auditorías</string>
    <string name="text_download_terminate">Descarga terminada</string>
    <string name="text_configure">Configuración</string>
    <string name="text_cancel">Cancelar</string>
    <string name="message_update_gps">Actualizar Georeferencia</string>
    <string name="message_update_gps_information">Está seguro de actualizar la georeferencia</string>
    <string name="text_close_store">Cerrar Tienda</string>
    <string name="text_info_route">Información de ruta</string>
    <string name="text_info_store">Información de tienda</string>
    <string name="text_info_aniversary_store">Aniversario de la Tienda</string>
    <string name="text_info_audits">Auditorias</string>
    <string name="text_download_polls">Descargando preguntas</string>
    <string name="text_download_polls_otpions">Descargando opciones de pregunta</string>
    <string name="menu_search">Buscar</string>
    <string name="text_audit">Auditoría</string>
    <string name="text_auditor">Auditar</string>
    <string name="title_activity_upload_photo">Subir foto</string>
    <string name="message_selection_image">Debe seleccionar una foto</string>
    <string name="message_image_no_found">No se econtró ninguna  foto</string>
    <string name="message_app_no_installing">No se encuentra instalada la aplicación</string>
    <string name="message_directory_temp_no_found">El directorio no existe, no hay imagenes temporales</string>
    <string name="message_directory_backup_no_found">El directorio de Backup no existe</string>
    <string name="text_comment">Comentario: </string>
    <string name="menu_text_close_sesion">Cerrar sesión</string>
    <string name="text_type">Tipo: </string>
    <string name="text_campaign">Campaña:</string>
    <string name="text_name">Nombre:</string>
    <string name="text_date">Fecha: </string>
    <string name="text_description">Descripción: </string>
    <string name="title_activity_publicities">Material POP</string>
    <string name="text_publicity_history">Historial Material POP</string>
    <string name="text_download_publicity">Descargando Publicidades</string>
    <string name="tex_finish">Finalizar</string>
    <string name="text_material_pop">Material POP:</string>
    <string name="text_download_products">Descargando productos</string>
    <string name="message_sync_store">Sincronizar tiendas</string>
    <string name="text_product">Producto: </string>
    <string name="message_save_audit_products">Para volver atrás debe guardar la lista de productos</string>
    <string name="text_input_precio">Precio: </string>
    <string name="text_products">Productos:</string>
    <string name="text_download_products_detail">Descargando detalle de productos</string>
    <string name="text_download_products_competity">Descargando productos de competencia</string>
    <string name="text_info_product">Información de producto</string>
    <string name="text_manufacture">Fabricante: </string>
    <string name="text_download_publicity_history">Descargando material POP histórico</string>
    <string name="message_audit_material_pop">Tiene que auditar el matrial POP</string>
    <string name="message_save_audit_material_pop">Debe guardar la lista de material POP</string>
    <string name="message_audit_init">No se puede volver atrás una vez iniciada la auditoría</string>
    <string name="message_sync_store_information">Está seguro que desea sincronizar los datos de la tienda</string>
    <string name="message_sync_campagna">Reinicializa campaña</string>
    <string name="message_sync_campagna_information">Está seguro de reinicializar la campaña</string>
    <string name="message_sync_audits_store">Actualizar auditorías</string>
    <string name="message_sync_audits_store_information">Se actualizará las auditorías de la tienda,  ¿está seguro?</string>
    <string name="text_hint_input_address">Ingresar nueva dirección</string>
    <string name="text_edit_address">Editar dirección</string>
    <string name="message_exit_not_save">Desea salir</string>
    <string name="mesaage_no_get_data">No se pudo  sincronizar los datos</string>
    <string name="message_exit_not_save_information">Está seguro que desea salir sin guardar los datos</string>
    <string name="text_download_visitis_company">Descargando vistas por pampaña</string>
    <string name="text_download_category_product">Descargando categoría de productos</string>
    <string name="text_categories">Categorías</string>
    <string name="text_download_stock_product_pop">Descargando stock de productos POP</string>
    <string name="text_change_pop">Cambios en POP</string>
    <string name="text_stock">Stock:</string>
    <string name="text_optimo">Optimo:</string>
    <string name="text_minimo">Minimo:</string>
    <string name="text_unidad">Unidad:</string>
    <string name="mesaage_no_send_mail">No se pudo enviar el correo de notificación</string>
    <string name="text_frecuency_visit">Frecuencia de Visita: </string>
    <string name="text_pedir">PEDIR PRODUCTO</string>
    <string name="text_prospeccon_venta">Prospección de Venta</string>
    <string name="text_prom_6m">Prom. 6M.</string>
    <string name="text_cuota_mes">Cuota Mes:</string>
    <string name="text_avance">Avance:</string>
    <string name="text_pedido_sugerido">Pedido sugerido:</string>
    <string name="text_distribuidor">Distribuidor: </string>
    <string name="text_seleccione_distribuidor">Seleciones distribuidor</string>
    <string name="text_cantidad">Cantidad:</string>
    <string name="message_prospeccion_venta_error">No se pudo obtener prospección de venta, intentelo nuevamente</string>
    <string name="text_moto_total">Monto total: </string>
</resources>