<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_info_store"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tvStoreFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre Tienda" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_id_store"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStoreId"
                android:paddingLeft="@dimen/padding_text"
                android:paddingRight="@dimen/padding_text"
                android:background="@color/colorRed"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <!--<FrameLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--&gt;-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_address"
                    android:textStyle="bold"
                    android:layout_weight="0.05"
                    android:id="@+id/textView" />
                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight="0.90" />

                <ImageButton
                    android:id="@+id/ibEditAddress"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="20dp"
                    android:layout_height="16dp"
                    android:layout_weight="0.05"
                    android:visibility="invisible"
                    android:src="@drawable/ic_action_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_reference"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvReferencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_district"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_type"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
